Fix hiding the overflow button when empty

--- a/native/userchrome/profile/chrome/pwa/content/browser.css
+++ b/native/userchrome/profile/chrome/pwa/content/browser.css
@@ -160,7 +160,8 @@
     --toolbar-display: flex;
   }
 
-  .overflow-button {
+  .overflow-button,
+  #nav-bar-overflow-button {
     display: var(--toolbar-display);
   }
 
